2013-10-04  Alexey Proskuryakov  <ap@apple.com>

        Watchlist is broken after <http://trac.webkit.org/r156880>

        * Scripts/webkitpy/common/config/watchlist: Remove an incorrect change.

2013-10-04  Brent Fulgham  <bfulgham@apple.com>

        Remove Qt features from build and test tools
        https://bugs.webkit.org/show_bug.cgi?id=122312

        Reviewed by Anders Carlsson.

        * Scripts/build-dumprendertree:
        * Scripts/build-jsc:
        * Scripts/build-webkit:
        * Scripts/build-webkittestrunner:
        * Scripts/old-run-webkit-tests:
        (openDumpTool):
        (buildPlatformResultHierarchy):
        (buildPlatformTestHierarchy):
        (readSkippedFiles):
        * Scripts/run-launcher:
        * Scripts/run-qtwebkit-tests: Removed.
        * Scripts/run-webkit-tests:
        (useNewRunWebKitTests):
        * Scripts/update-webkit:
        * Scripts/webkit-build-directory:
        * Scripts/webkitdirs.pm:
        (argumentsForConfiguration):
        (jscProductDir):
        (builtDylibPathForName):
        (isAppleWebKit):
        (launcherPath):
        (launcherName):
        (checkRequiredSystemConfig):
        (setupCygwinEnv):
        (copyInspectorFrontendFiles):
        (setPathForRunningWebKitApp):
        * Scripts/webkitpy/common/checkout/baselineoptimizer.py:
        * Scripts/webkitpy/common/checkout/baselineoptimizer_unittest.py:
        (BaselineOptimizerTest.test_mac_future):
        (BaselineOptimizerTest.test_win_does_not_drop_to_win_7sp0):
        (BaselineOptimizerTest.test_common_directory_includes_root):
        (BaselineOptimizerTest.test_virtual_ports_filtered):
        * Scripts/webkitpy/common/checkout/changelog_unittest.py:
        (test_parse_reviewer_text):
        * Scripts/webkitpy/common/config/watchlist:
        * Scripts/webkitpy/layout_tests/run_webkit_tests_integrationtest.py:
        (PortTest.disabled_test_chromium_mac_lion_in_test_shell_mode):
        * Scripts/webkitpy/port/base.py: